# Ecommerce-project

./: README.md
ECOMMERCE/: .coverage  .secret.key  db.sqlite3  pyproject.toml
ECOMMERCE/basket/: basket.py  views.py
ECOMMERCE/basket/templates/basket/: summary.html
ECOMMERCE/core/: settings.py  urls.py
ECOMMERCE/core/secret/: secret.py
ECOMMERCE/htmlcov/: core___init___py.html  core_secret___init___py.html  core_secret_secret_py.html  core_settings_py.html  core_urls_py.html  index.html  manage_py.html  status.json  store___init___py.html  store_admin_py.html  store_apps_py.html  store_context_processors_py.html  store_migrations_0001_initial_py.html  store_migrations___init___py.html  store_models_py.html  store_tests___init___py.html  store_tests_test_models_py.html  store_tests_test_views_py.html  store_tests_tests_py.html  store_urls_py.html  store_views_py.html
ECOMMERCE/store/: admin.py  context_processors.py  models.py  urls.py  views.py
ECOMMERCE/store/migrations/: 0001_initial.py
ECOMMERCE/store/templates/store/: base.html  home.html
ECOMMERCE/store/templates/store/products/: single.html
ECOMMERCE/store/tests/: test_models.py  test_views.py
ECOMMERCE/templates/: base.html
